# ruvector

./: Cargo.toml  README.md
bench_results/: comparison_benchmark.md  real_comparison_benchmark.md
bench_results/results/: competitors.json
benchmarks/: bench_ruvector.rs  real_benchmark.py  ruvector_benchmark.rs
benchmarks/results/: benchmark_report.md
crates/mcp-brain-server/src/: graph.rs  lib.rs  pipeline.rs  routes.rs  symbolic.rs  trainer.rs  types.rs
crates/neural-trader-coherence/src/: lib.rs
crates/neural-trader-replay/src/: lib.rs
crates/neural-trader-wasm/src/: lib.rs
crates/ruvector-cli/src/: config.rs
crates/ruvector-cnn-wasm/src/: lib.rs
crates/ruvector-cnn/benches/: cnn_benchmarks.rs  int8_bench.rs
crates/ruvector-cnn/examples/: graph_rewrite_demo.rs
crates/ruvector-cnn/src/: embedding.rs  error.rs  lib.rs
crates/ruvector-cnn/tests/: acceptance_gates.rs  backbone_test.rs  contrastive_test.rs  graph_rewrite_integration.rs  integration_test.rs  kernel_equivalence.rs  layers_test.rs  quality_validation.rs  simd_test.rs
crates/ruvector-collections/src/: collection.rs
crates/ruvector-core/benches/: hnsw_search.rs  real_benchmark.rs
crates/ruvector-core/src/: agenticdb.rs  distance.rs  storage.rs  types.rs  vector_db.rs
crates/ruvector-core/tests/: bench_hnsw.rs
crates/ruvector-node/src/: lib.rs
crates/ruvllm/: .reasoning_bank_patterns  Cargo.toml
docs/adr/: ADR-087-ruvix-cognition-kernel.md
docs/cnn/: index.html
examples/train-discoveries/: Cargo.toml
examples/train-discoveries/src/: main.rs
scripts/: train_brain.sh
(+150 files in other folders)
