[package]
name = "train-discoveries"
version = "0.1.0"
edition = "2021"
publish = false
description = "Cross-domain discovery ETL pipeline using RuVector sublinear solver"

[dependencies]
ruvector-core = { path = "../../crates/ruvector-core", default-features = false, features = ["parallel"] }
ruvector-solver = { path = "../../crates/ruvector-solver", features = ["forward-push", "neumann"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
